--- a/src/public/style.css
+++ b/src/public/style.css
@@ -21,7 +21,7 @@ section.chat__section {
 }
 .brand {
     padding: 20px;
-    background: #f1f1f1;
+    background: #11e017;
     display: flex;
     align-items: center;
 }
